notes-calendar.css
#notes-calendar *, #notes-calendar-noboard * {
    border-collapse: collapse;
    td,
    th {
        border: 1px solid black;
        padding: 3px;
        text-align: center;
    }

    th {
        font-weight: bold;
        background-color: #e6e6e6;
    }

    .wk {
        color: gray
    }

    .noted {
        background-color: #ccc;
    }

    .selected-day {
        background-color: aqua;
    }
}

.notes-calendar-menu {
    width: 260px;
    margin-bottom: 5px;
    border: 1px solid #ccc;
}
.notes-calendar-year,
.notes-calendar-month {
    width: 110px;
    box-sizing: border-box;
    background-color: #f8f8f8;
}
.notes-calendar-summary-button {
    width: 20px;
    box-sizing: border-box;
    background-color: #f8f8f8;
}

.notes-calendar-settings-button {
    width: 20px;
    box-sizing: border-box;
    background-color: #f8f8f8;
}

#note-board, .note-board-overlay {
    max-width: 300px;
    border: 1px solid #ccc;
    border-radius: 4px;
    background-color: #f8f8f8;
}

.note-board-summary {
    width: 260px;
    max-width: 260px;
    box-sizing: border-box;
    border: 1px solid #ccc;
    border-radius: 4px;
    vertical-align: middle;
    background-color: #f8f8f8;
}

.note-board-info-button,
.note-board-edit-button {
    width: 20px;
    font-family: "Lucida Console", "Courier New", monospace;
    border-radius: 4px;
    background-color: #f8f8f8;
}

.note-board-details {
    width: 100%;
    /* height: 150px; */  /* better suited for static noteboard */
    box-sizing: border-box;
    border: 1px solid #ccc;
    border-radius: 4px;
    background-color: #f8f8f8;
    resize: none;
}

.calendar-summary-overlay {
    background-color: #f8f8f8;
}

.calendar-summary {
    border-collapse: collapse;
    border: 1px solid black;
    padding: 3px;
}
.calendar-summary tr{
    border-bottom: 1px solid black;
}
.calendar-summary td{
    padding-right: 10px;
}

.calendar-settings-item {
    background-color: #f8f8f8;
    border: 1px solid black;
    padding: 3px;
}

.flex {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
}

.width50 {
    width: 50%;
}

